--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             />
           </li>
 
-          <li class="personagem" id="Wolverine" data-name="Wolverine"
+          <li class="personagem" id="wolverine" data-name="Wolverine"
           data-description="Poderes, Garras Metálicas. Fator cura Regenerativo, Super Agilidade">
             <img
               src="./src/imagens/card-wolverine.jpg"
